src/objects/Potential_Revenue__c.object
<CustomObject>
    <description>XLR8 custom object that tracks the management of new policies and the renewal of existing policies.</description>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <inlineHelpText>Select or enter the date this Case is closed.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Co-Insured Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Potential_Revenue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Tobacco_Class__c</fullName>
        <label>Co-Insured Tobacco Class</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Co_Insured_Tobacco_Type__c</fullName>
        <label>Co-Insured Tobacco Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cigarettes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chew/Dip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicotine Patch/Gum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Compensation_Type__c</fullName>
        <label>Compensation Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commission</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flat Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Asset Based Fee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Combo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TBD</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Pipeline_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Coverage_Amount_Desired__c</fullName>
        <label>Coverage Amount Desired</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Coverage_Desired__c</fullName>
        <inlineHelpText>Used to record any notes pertinent to the coverage.</inlineHelpText>
        <label>Coverage Desired Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Coverage_Type__c</fullName>
        <label>Coverage Type</label>
        <picklist>
            <picklistValues>
                <fullName>Single</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Joint</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Parent/Child</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Current_Death_Benefit__c</fullName>
        <label>Current Death Benefit</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Detailed_Description__c</fullName>
        <inlineHelpText>Use for entering detailed information up to 32K characters.</inlineHelpText>
        <label>Detailed Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <formula>Entity__r.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This field looks at the Entity and displays the Entity Record Type.</inlineHelpText>
        <label>Entity Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity__c</fullName>
        <label>Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Management</relationshipLabel>
        <relationshipName>Potential_Revenue</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Deposits__c</fullName>
        <label>Estimated Annual Deposits</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Annual_Premium__c</fullName>
        <label>Estimated Annual Premium</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Asset_Value__c</fullName>
        <label>Estimated Asset Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Fully Insured</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Self Insured</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Import_ID__c</fullName>
        <externalId>true</externalId>
        <label>Import ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Case_Type__c</fullName>
        <label>Insurance Case Type</label>
        <picklist>
            <picklistValues>
                <fullName>Informal Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Formal Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional Writing Advisor</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured_Date_of_Birth__c</fullName>
        <formula>Insured_Name__r.Birthdate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Insured Date of Birth</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Insured_Name__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Insured Name</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Entity__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Potential_Revenue</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Insured_Tobacco_Class__c</fullName>
        <label>Insured Tobacco Class</label>
        <picklist>
            <picklistValues>
                <fullName>Non-Smoker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Smoker</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Insured_Tobacco_Type__c</fullName>
        <label>Insured Tobacco Type</label>
        <picklist>
            <picklistValues>
                <fullName>Cigarettes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Occasional Cigar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chew/Dip</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marijuana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nicotine Patch/Gum</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pipe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Next_Step_Due_Date__c</fullName>
        <inlineHelpText>Select or enter the due date for the next step.</inlineHelpText>
        <label>Next Step Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Next_Step_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select the User responsible for performing the Next Step.</inlineHelpText>
        <label>Next Step Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Prospects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Next_Step__c</fullName>
        <inlineHelpText>Choose the Next Step to be done. (Based on current Step selection)</inlineHelpText>
        <label>Next Step</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Phone / Email Contact</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Appointment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Send Forms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Schedule Follow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pend for Future Potential</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Opened_Date__c</fullName>
        <inlineHelpText>Select or enter the start date for this Case.</inlineHelpText>
        <label>Opened Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The person in the firm responsible for this case.</inlineHelpText>
        <label>Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Pipeline_Prospects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Carrier_Provider__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Carrier/Provider</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Account.RecordType.DeveloperName</field>
                <operation>contains</operation>
                <value>General</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Type__c</field>
                <operation>contains</operation>
                <value>Professional Associate</value>
            </filterItems>
            <filterItems>
                <field>Account.Entity_Sub_Type__c</field>
                <operation>contains</operation>
                <value>Carrier/Provider</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Account</referenceTo>
        <relationshipName>Potential_Revenue1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Producer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Primary Producer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Potential_Revenue2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Producer_Type__c</fullName>
        <label>Producer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Inside</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Outside</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Projected_Revenue__c</fullName>
        <inlineHelpText>Enter the amount of revenue expected to be generated.</inlineHelpText>
        <label>Projected Revenue</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Referred_by_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Referral source Lookup to existing Contact.</inlineHelpText>
        <label>Referred by Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Pipeline_Prospects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Entity__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>Referral source Lookup to existing Entity.</inlineHelpText>
        <label>Referred by Entity</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Pipeline_Prospects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Referred_by_Other__c</fullName>
        <inlineHelpText>Referral source text up to 30 characters.</inlineHelpText>
        <label>Referred by Other</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Riders__c</fullName>
        <label>Riders</label>
        <picklist>
            <picklistValues>
                <fullName>Accelerated Benefit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability Waiver of Premium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Waiver of Premium</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Servicing_Firm_Entity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Servicing Firm field that is a lookup to an Entity record.</description>
        <label>Servicing Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Case Management (Servicing Firm)</relationshipLabel>
        <relationshipName>Case_Management</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Servicing_Firm__c</fullName>
        <description>This is the text field for Servicing Name</description>
        <label>Servicing Firm Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <inlineHelpText>Select the current point you are at in the process.</inlineHelpText>
        <label>Step</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Attempting to Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contact Made</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Discovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Appointment Scheduled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Appointment Complete</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Underwriting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Present Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Proposal Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contract Presented</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Response</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delete - Error</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>CASE(Stage__c, &apos;Inforce&apos;,&apos;Closed&apos;, &apos;Cancelled&apos;,&apos;Closed&apos;,&apos;Delete-Error&apos;,&apos;Closed&apos;,&apos;No Response&apos;,
  &apos;Closed&apos;,&apos;On Hold&apos;,&apos;Closed&apos;,&apos;Proposal Accepted&apos;,&apos;Closed&apos;,&apos;Open&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>This calculates the Status of the Case as either Open or Closed based on the Step of the record.</inlineHelpText>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Targeted_Premium_Amount__c</fullName>
        <label>Targeted Premium Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Targeted_Products__c</fullName>
        <label>Targeted Products</label>
        <picklist>
            <picklistValues>
                <fullName>401(a)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>401(k)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>403(b)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>457</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corporate Liability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disability</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Bonus Plan (EBP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Executive Life Insurance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Flexible Spending Account (FSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Reimbursement Account (HRA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Spending Account (HSA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indexed Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Care (LTC)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Long Term Disability (LTD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-qual 409A Deferred Comp Plan (DCP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-qual Suppl Exec Ret Plan (SERP)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P&amp;C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Short Term Disability (STD)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Indexed Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Survivorship Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Term</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Umbrella</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Variable Universal Life</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vision</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Targeted_Services__c</fullName>
        <label>Targeted Services</label>
        <picklist>
            <picklistValues>
                <fullName>401K</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Comprehensive Wealth Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Estate Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Financial Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Insurance Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retirement Planning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tax Planning</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Total_Eligible_Employees__c</fullName>
        <inlineHelpText>The number of eligible employees</inlineHelpText>
        <label>Total Eligible Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Employees__c</fullName>
        <inlineHelpText>The total number of employees</inlineHelpText>
        <label>Total Employees</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>New Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Policy Renewal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reallocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consulting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Waiver_of_Premium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Waiver of Premium</label>
        <type>Checkbox</type>
    </fields>
    <label>Case Management</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Case Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Case Management</pluralLabel>
    <recordTypes>
        <fullName>Commercial_Insurance</fullName>
        <active>true</active>
        <description>Commercial Auto, Liability, Property, Umbrella and Workers Comp</description>
        <label>Commercial Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Executive_Benefits</fullName>
        <active>true</active>
        <description>Executive Bonus, Life, Compensation, and Retirement</description>
        <label>Executive Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Group_Benefits</fullName>
        <active>true</active>
        <description>Group Health, Disability, and Life</description>
        <label>Group Benefits</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Life_Insurance</fullName>
        <active>true</active>
        <description>Case Management for Individual Life Insurance</description>
        <label>Individual Life Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Individual_Other_Insurance</fullName>
        <active>true</active>
        <description>Individual Insurance for Disability, Health, LTC, P&amp;C, Umbrella</description>
        <label>Individual Other Insurance</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retirement_Plans</fullName>
        <active>true</active>
        <description>Group Retirement Plans - 401(a), 401(k), 403(b), 457</description>
        <label>Retirement Plans</label>
    </recordTypes>
    <recordTypes>
        <fullName>Wealth_Mgmt</fullName>
        <active>false</active>
        <description>Wealth Management</description>
        <label>Wealth Mgmt</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Closed_Date_Required</fullName>
        <active>true</active>
        <description>If Step contains Proposal Accepted, Inforce or Cancelled Proposal Accepted, then a Closed Date is required.</description>
        <errorConditionFormula>AND(
OR(
IF(Text(Stage__c) = &quot;Inforce&quot;,TRUE, FALSE), 
IF(Text(Stage__c) = &quot;Proposal Accepted&quot;,TRUE, FALSE), IF(Text(Stage__c) = &quot;Cancelled&quot;,TRUE, FALSE)),
ISBLANK(Closed_Date__c))</errorConditionFormula>
        <errorMessage>If Step is set to Proposal Accepted, Inforce or Cancelled Proposal Accepted, then a Closed Date is required.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CoIns_Smoker_Class_Requires_Tobacco_Type</fullName>
        <active>true</active>
        <description>If the Co-Insured Tobacco Class equals &quot;Smoker&quot;, then the Insured Co-Insured Tobacco Type must be populated.</description>
        <errorConditionFormula>AND ( TEXT( Co_Insured_Tobacco_Class__c ) = &apos;Smoker&apos;, ISBLANK(TEXT(Co_Insured_Tobacco_Type__c) ))</errorConditionFormula>
        <errorMessage>If the Co-Insured Tobacco Class equals &quot;Smoker&quot;, then the Insured Co-Insured Tobacco Type must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Ins_Smoker_Class_Requires_Tobacco_Type</fullName>
        <active>true</active>
        <description>If the Insured Tobacco Class equals &quot;Smoker&quot;, then the Insured Tobacco Type must be populated.</description>
        <errorConditionFormula>AND ( TEXT( Insured_Tobacco_Class__c ) = &apos;Smoker&apos;, ISBLANK(TEXT(Insured_Tobacco_Type__c) ))</errorConditionFormula>
        <errorMessage>If the Insured Tobacco Class equals &quot;Smoker&quot;, then the Insured Tobacco Type must be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Referral_Others_Required</fullName>
        <active>true</active>
        <description>If Referred by Entity and Referred by Contact are empty then Referred by Other is required.</description>
        <errorConditionFormula>AND(
ISBLANK( Referred_by_Entity__c ),
ISBLANK( Referred_by_Contact__c ),
ISBLANK( Referred_by_Other__c) 
)</errorConditionFormula>
        <errorDisplayField>Referred_by_Other__c</errorDisplayField>
        <errorMessage>Please enter at least one referral source.</errorMessage>
    </validationRules>
</CustomObject>